--- a/index.html
+++ b/index.html
@@ -15,36 +15,36 @@
                 </div>
                 <nav class="navlist">
                     <ul>
-                        <li><a href="grids.html">Inicio</a></li>
-                        <li><a href="./Pages/contactanos.html">Contactanos</a></li>
-                        <li><a href="./Pages/login.html">Login</a></li>
-                        <li><a href="./Pages/register.html">Register</a></li>
-                        <li><a href="./Pages/faq.html">FAQ</a></li>
+                        <li><a href="index.html">Inicio</a></li>
+                        <li><a href="./pages/contactanos.html">Contactanos</a></li>
+                        <li><a href="./pages/login.html">Login</a></li>
+                        <li><a href="./pages/register.html">Register</a></li>
+                        <li><a href="./pages/faq.html">FAQ</a></li>
     
                     </ul>
                 </nav>
             </header>
             <main class="main">
                     <section class="section__conteiner">
-                        <img src="./Assets/IMG/dfd.jpg" alt="" class="imagen__random">
+                        <img src="./assets/img/dfd.jpg" alt="" class="imagen__random">
                         <p>
                             Lorem ipsum dolor sit amet, consectetur adipisicing elit. Hic, ipsum! Eligendi perspiciatis enim voluptate atque ipsam expedita vero odit accusamus?
                         </p>
                     </section>
                     <section class="section__conteiner">
-                        <img src="./Assets/IMG/bio2.jpg" alt="" class="imagen__randomDos">
+                        <img src="./assets/img/bio2.jpg" alt="" class="imagen__randomDos">
                         <p>
                             Lorem ipsum dolor sit amet consectetur adipisicing elit. Sunt reiciendis pariatur nostrum similique iste ex amet voluptatibus maxime, optio enim.
                         </p>
                     </section>
                     <section class="section__conteiner">
-                        <img src="./Assets/IMG/dfd.jpg" alt="" class="imagen__random">
+                        <img src="./assets/img/dfd.jpg" alt="" class="imagen__random">
                         <p>
                             Lorem ipsum dolor sit amet, consectetur adipisicing elit. Hic, ipsum! Eligendi perspiciatis enim voluptate atque ipsam expedita vero odit accusamus?
                         </p>
                     </section>
                     <section class="section__conteiner">
-                        <img src="./Assets/IMG/bio2.jpg" alt="" class="imagen__randomDos">
+                        <img src="./assets/img/bio2.jpg" alt="" class="imagen__randomDos">
                         <p>
                             Lorem ipsum dolor sit amet consectetur adipisicing elit. Sunt reiciendis pariatur nostrum similique iste ex amet voluptatibus maxime, optio enim.
                         </p>
@@ -52,15 +52,15 @@
             </main>
             <aside class="aside">
                 <section>
-                    <img class="mcdonald" src="./Assets/IMG/mcdonald.jpg" alt=""><a href=""></a></img>
+                    <img class="mcdonald" src="./assets/img/mcdonald.jpg" alt=""><a href=""></a></img>
                 </section>
             </aside>
 
             <footer class="footer">
                 <p>Siguenos en redes sociales</p>
-                <img src="./Assets/IMG/facebook.png" alt="">
-                <img src="./Assets/IMG/instagram.png" alt="">
-                <img src="./Assets/IMG/whatsapp.png" alt="">
+                <img src="./assets/img/facebook.png" alt="">
+                <img src="./assets/img/instagram.png" alt="">
+                <img src="./assets/img/whatsapp.png" alt="">
             </footer>
 
  
