--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
             </header>
             <main class="main">
                     <section class="section__conteiner">
-                        <img src="./assets/img/dfd.jpg" alt="" class="imagen__random">
+                        <img src="./Assets/IMG/dfd.jpg" alt="" class="imagen__random">
                         <p>
                             Lorem ipsum dolor sit amet, consectetur adipisicing elit. Hic, ipsum! Eligendi perspiciatis enim voluptate atque ipsam expedita vero odit accusamus?
                         </p>
