--- a/Pages/contactanos.html
+++ b/Pages/contactanos.html
@@ -11,7 +11,7 @@
     <div class="container-grid">
         <header class="header">
             <div>
-                <img class="logoipsum" src="../assets/img/logoipsum-logo-5.svg" alt="">
+                <img class="logoipsum" src="../Assets/IMG/logoipsum-logo-5.svg" alt="">
             </div>
             <nav class="navlist">
                 <ul>
@@ -25,13 +25,13 @@
         </header>
         <main class="main">
             <section class="section__conteiner">
-                <img class="contactsectionimg"src="../assets/img/phone.jpg" alt="">
+                <img class="contactsectionimg"src="../Assets/IMG/phone.jpg" alt="">
                 <p>
                     Lorem ipsum dolor sit amet, consectetur adipisicing elit. Hic, ipsum! Eligendi perspiciatis enim voluptate atque ipsam expedita vero odit accusamus?
                 </p>
             </section>
             <section class="section__conteiner">
-                <img  class="contactsectionimg"src="../assets/img/phoneoperator.jpg" alt="">
+                <img  class="contactsectionimg"src="../Assets/IMG/phoneoperator.jpg" alt="">
                 <p>
                     Lorem ipsum dolor sit amet consectetur adipisicing elit. Sunt reiciendis pariatur nostrum similique iste ex amet voluptatibus maxime, optio enim.
                 </p>
@@ -44,9 +44,9 @@
 
         <footer class="footer">
             <p>Siguenos en redes sociales</p>
-            <img src="../assets/img/facebook.png" alt="">
-            <img src="../assets/img/instagram.png" alt="">
-            <img src="../assets/img/whatsapp.png" alt="">
+            <img src="../Assets/IMG/facebook.png" alt="">
+            <img src="../Assets/IMG/instagram.png" alt="">
+            <img src="../Assets/IMG/whatsapp.png" alt="">
         </footer>
     </div>  
 </body>
